codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
• Waiting for 2 agents
  └ Robie [explorer]
    Ada [reviewer]
    Wakes on a child report/message, follow-up task, human steering, or timeout.


• Wait ended — child status update
  └ Robie [explorer]: Completed - Done
    Ada [reviewer]: Running
