codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: contents
---


  Would you like to make the following edits?

  Reason: The model wants to apply changes

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for these files
  3. No, and tell Corbanu Terminal what to do differently (esc)

  Options that last beyond this request: choose with ↑/↓, then enter.           
  Press enter to confirm or esc to cancel
